2005-09-08  Paul Brook  <paul@codesourcery.com>

	* gas/arm/arch6zk.d: Rename smi to smc.
	* gas/arm/arch6zk.s: Ditto.
	* gas/arm/thumb32.d: Ditto.
	* gas/arm/thumb32.s: Ditto.

2005-09-07  Richard Henderson  <rth@redhat.com>

	* gas/lns/lns-common-1.d: Don't match header or special opcode numbers.
	* gas/lns/lns-common-1.s: Update for syntax change.
	* gas/lns/lns-diag-1.[sl]: Likewise.

2005-09-07  Richard Henderson  <rth@redhat.com>

	* gas/mips/mips16-dwarf2.d: Don't match anything but address and line
	number increments.  Adjust relocation address.
	* gas/mips/mips16-dwarf2-n32.d: Likewise.  Add "N32" to test name.

2005-09-07  Richard Henderson  <rth@redhat.com>

	* gas/cris/rd-dw2-1.d: Don't match anything but address and line
	number increments.
	* gas/cris/rd-dw2-10.d, gas/cris/rd-dw2-11.d, gas/cris/rd-dw2-12.d,
	gas/cris/rd-dw2-13.d, gas/cris/rd-dw2-14.d, gas/cris/rd-dw2-15.d,
	gas/cris/rd-dw2-2.d, gas/cris/rd-dw2-3.d, gas/cris/rd-dw2-4.d,
	gas/cris/rd-dw2-5.d, gas/cris/rd-dw2-6.d, gas/cris/rd-dw2-7.d,
	gas/cris/rd-dw2-8.d, gas/cris/rd-dw2-9.d: Likewise.

2005-09-07  Richard Henderson  <rth@redhat.com>

	* gas/lns/lns.exp: New file.
	* gas/lns/lns-common-1.[sd]: New test.
	* gas/lns/lns-diag-1.[sl]: New test.

2005-09-06  Chao-ying Fu  <fu@mips.com>

	* gas/mips/mips.exp: Run MT test for mips32r2 only.
	* gas/mips/mips32-mt.[sdl]: New test.

2005-09-06  Paul Brook  <paul@codesourcery.com>

	* gas/arm/thumb2_relax.d: New test.
	* gas/arm/thumb2_relax.s: New test.
	* gas/arm/thumb32.d: Adjust expected results to include relaxation.
	* gas/arm/thumb32.s: Tweak for better coverage of relaxable
	instructions.  Remove load/store tests.

2005-09-02  Paul Brook  <paul@codesourcery.com>

	* gas/arm/arm3-bad.s: New test.
	* gas/arm/arm3-bad.d: New test.
	* gas/arm/arm3.s: Avoid illegal instructions.
	* gas/arm/arm3.d: Ditto.

2005-09-02  Paul Brook  <paul@codesourcery.com>

	* gas/arm/vfp-bad_t2.d, gas/arm/vfp-bad_t2.l, arm/vfp-bad_t2.s,