@@ -9,7 +9,7 @@
   Special opcode .*: advance Address by 0 to 0x0 and Line by 2 to 3
   Special opcode .*: advance Address by 4 to 0x4 and Line by 4 to 7
   Special opcode .*: advance Address by 14 to 0x12 and Line by 8 to 15
-  Advance PC by 32768 to 8012
+  Advance PC by 32768 to 0x8012
   Special opcode .*: advance Address by 0 to 0x8012 and Line by 4 to 19
-  Advance PC by 2 to 8014
+  Advance PC by 2 to 0x8014
   Extended opcode 1: End of Sequence
